# 3d_navigation

./: README.md  stack.xml
3d_nav_executive/: CMakeLists.txt  mainpage.dox  manifest.xml  willow-green-0.025.pgm  willow-green-0.025.yaml
3d_nav_executive/config/: 3d_nav_view.vcg  arm_costmap_params.yaml  arm_poses.txt  base_costmap_params.yaml  base_local_planner_poses.yaml  base_local_planner_trajectory.yaml  costmap_common_params.yaml  experiment_goals.txt  global_costmap_params.yaml  goals.txt  local_costmap_params_close.yaml  path.txt  pr2_footprint_links.yaml  pr2_planning_description.yaml  sbpl_global_params.yaml  spine_costmap_params.yaml
3d_nav_executive/include/3d_nav_executive/: arm.h  arm_motion_recorder.h
3d_nav_executive/launch/: 3d_nav_demo.launch  3d_nav_environment.launch  3d_nav_environment_kinect.launch  experiment_script1.launch  experiment_script2.launch  experiments.launch  just_move_base.launch  kinect_perception.launch  laser+stereo-perception.launch  move_base_sbpl_3d.launch  pickup.launch  putdown.launch  record_arm_motion.launch  wg_2dnav_amcl.launch
3d_nav_executive/scripts/: add_attached_box.py  point_head_down.py  point_head_driving.py  tuck_arms_and_scan.py
3d_nav_executive/src/: arm.cpp  arm_motion_recorder.cpp  demo_3dnav.cpp  experiment_script1.cpp  experiment_script2.cpp  experiments.cpp
3d_nav_gazebo/: manifest.xml
3d_nav_gazebo/config/: shadow_filter.yaml
3d_nav_gazebo/launch/: table.launch  (+5 more)
octomap_collision_check/: CMakeLists.txt  mainpage.dox  manifest.xml
pose_follower_3d/: CMakeLists.txt  blp_plugin.xml  manifest.xml
sbpl_lattice_planner_layer_3d/: 3dnav.mprim  CMakeLists.txt  bgp_plugin.xml  manifest.xml  pr2sides.mprim
(+23 files in other folders)
